tests/ui/enum_bad_param.stderr
error: fixcol-derive error: Unrecognized parameter "thing".
  --> tests/ui/enum_bad_param.rs:10:25
   |
10 | #[fixcol(key_width = 3, thing = yes)]
   |                         ^^^^^
